<resources>
    <string name="app_name">GPS Maps Navigation &amp; Traffic</string>
    <string name="app_name_plash">GPS Maps\n Navigation &amp; Traffic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="next">Next</string>
    <string name="navigation">Navigation</string>
    <string name="my_location">My Location</string>
    <string name="tittle_home">GPS Navigation</string>
    <string name="cancel_subscription"><u>Cancel Subscription</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="rate_application">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="share_application">Share This App</string>
    <string name="exit_app">Exit</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permissionDeniedHeader">Required Permissions</string>
    <string name="storage_concent_desc">Storage permissions are necessery for saving and retriving the maps data.</string>
    <string name="loading_map_data">loading...</string>
    <string name="routes_fragment">Navigation Fragment</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="select_on_map">Select Location On Map</string>
    <string name="my_location_hint">Current Location</string>
    <string name="start">Start</string>
    <string name="show_route">Show Route</string>
    <string name="destination_hint">Select Destination Location</string>
    <string name="travel_tool">Travel Tools</string>

    <string name="_32_c">32°C</string>
    <string name="nairobi_city">Nirobi</string>
    <string name="compas_fragment">Compass Fragment</string>
    <string name="go">Done</string>
    <string name="done">DONE</string>
    <string name="save">SAVE</string>
    <string name="places_search_fragment">Places Fragment</string>
    <string name="explore_places">Explore Places</string>
    <string name="places_list">saved_places</string>
    <string name="saved_places_fragment">Saved Places Fragment</string>
    <string name="saved_places">Saved Places</string>
    <string name="qibla_compass">Qibla Compass</string>
    <string name="continue_with_ads">Continue With Ads</string>
    <string name="sub_id_Weekly">com.otl.gps.navigation.route.remove_adx</string>
    <string name="billing_hash">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAs2iEIlA8pLT5D1qguYu4RIJMBxXF06A24pzHK2nk0qwI1HfXNqGLa+/70qpv6C0iDbQgZEG3uKtW6NqEYZXDJBcUEpHdbsioEzSyLcWIhQjFLoTHvcIPoRexE5pq9/Lg1T/dJwPqWUwaijEDnB9xP34FQ7cbxJXQbrrWyYy1PnPxB5ecVM2vp+TGM1QHGrHLQlX4PSWwmR0JpYzTWbi+Dc03JN1tMQ9xd95AC069nacszzeedwfk8Grtl+KwN24H2GFcyH/TF+Uq1pgqezbz7VgGxvbjfGu7HbZ7cWovNp0QldLerTGF0bsAuY2Yl4bB+dhPqLLYzt6SYHxPr5YGUQIDAQAB</string>
    <string name="ad_label">AD</string>
    <string name="download">Download</string>
    <string name="dialog_battery_button_positive">"Accept "</string>
    <string name="dialog_battery_button_negative">Deny</string>
    <string name="dialog_battery_message">Add battery optimization exclusion for better performance and experience.</string>
    <string name="dialog_battery_title">Battery Optimization</string>



    <string name="description1">Dear User,\n  Your privacy and data safety is our first priority. We make this app available for free by placing Ads.</string>
    <string name="description2">As this app contains Ads. To see relevant ads that best suit your interest click agree to watch personalized ads. To see just random advertisement that dont relate to your interest you may click deny.</string>
    <string name="privacy_link"><u>Privacy Policy</u></string>
    <string name="positive_text_consent">Agree</string>
    <string name="negative_consent_text">Deny</string>
    <string name="renew_instructions"> Your subscription will be renewed at the end of your weekly payment cycle. You can cancel anytime.</string>


</resources>