<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.otl.gps.navigation.map.route.view.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes_frag"
        android:name="com.otl.gps.navigation.map.route.view.fragment.maps.NavigationFragmentGoogle"
        android:label="@string/routes_fragment"
        tools:layout="@layout/fragment_route_finder_google"
        />
    <fragment
        android:id="@+id/navigation_saved_places"
        android:name="com.otl.gps.navigation.map.route.view.fragment.places.SavedPlacesListFragment"
        android:label="@string/saved_places"
        tools:layout="@layout/fragment_saved_places" />
    <fragment
        android:id="@+id/navigation_my_loc_frag"
        android:name="com.otl.gps.navigation.map.route.view.fragment.maps.GoogleMapsMyLocFragment"
        android:label="@string/routes_fragment"
        tools:layout="@layout/activity_my_location_google" />

    <fragment
        android:id="@+id/navigation_compass"
        android:name="com.otl.gps.navigation.map.route.view.fragment.compass.CompassFragment"
        android:label="@string/compas_fragment"
        tools:layout="@layout/fragment_compass" />



    <fragment
        android:id="@+id/navigation_qibla_compass"
        android:name="com.otl.gps.navigation.map.route.view.fragment.travelTools.QiblaCompassFragment"
        android:label="@string/qibla_compass"
        tools:layout="@layout/fragment_qibla_compass" />

    <fragment
        android:id="@+id/navigation_places_list"
        android:name="com.otl.gps.navigation.map.route.view.fragment.places.PlacesSerchFragment"        android:label="@string/places_list"
        tools:layout="@layout/fragment_places" />
    <fragment
        android:id="@+id/navigation_explore_places"
        android:name="com.otl.gps.navigation.map.route.view.fragment.places.ExplorePlacesFragment"
        android:label="@string/explore_places"
        tools:layout="@layout/fragment_places" />

    <fragment
        android:id="@+id/navigation_travel_tool"
        android:name="com.otl.gps.navigation.map.route.view.fragment.travelTools.TravelToolsFragment"
        android:label="@string/travel_tool"
        tools:layout="@layout/travel_tools" />

</navigation>