<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <!--    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
    <!--        android:id="@+id/adViewExit"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:visibility="gone"-->
    <!--        ads:adSize="MEDIUM_RECTANGLE"-->
    <!--        ads:adUnitId="@string/exit_banner_ad_unit"-->
    <!--        ads:layout_constraintBottom_toBottomOf="parent"-->
    <!--        ads:layout_constraintEnd_toEndOf="parent"-->
    <!--        ads:layout_constraintStart_toStartOf="parent" />-->


    <TextView
        android:id="@+id/header_text"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"

        android:text="@string/exit_app"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"


        android:text="@string/are_you_sure_to_exit"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ads_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disc_text">

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"

            android:elevation="0dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="60dp" />


        <TextView
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:elevation="0dp"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="60dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ads_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/browser_actions_bg_grey"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/nativeAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>