<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:backgroundTint="@color/white"
    android:gravity="center"
    android:maxWidth="320dp"
    android:orientation="vertical"
    app:cardCornerRadius="50dp"
    app:layout_constraintWidth_max="320dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/app_name2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="GPS Maps Navigation"
            android:textColor="#262626"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon_image" />

        <ImageView
            android:id="@+id/app_icon_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="&amp; Traffic"
            android:textColor="#262626"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/app_name2" />


        <TextView
            android:id="@+id/description1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/poppins"

            android:gravity="center"
            android:text="@string/description1"
            android:textColor="#004FA5"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="fill_parent"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="center"
            android:fontFamily="@font/poppins"

            android:text="@string/description2"

            android:textColor="#2C2C2C "
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description1" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:autoLink="web"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/privacy_link"
            android:textColor="#262626"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toBottomOf="@+id/description3" />

        <TextView
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/consent_button_background"
            android:gravity="center"
            android:text="@string/positive_text_consent"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/description3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/no_button"
            app:layout_constraintTop_toBottomOf="@+id/privacy" />

        <TextView
            android:id="@+id/no_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/consent_button_background_hollow"
            android:gravity="center"
            android:text="@string/negative_consent_text"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yes_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/description3"
            app:layout_constraintTop_toTopOf="@+id/yes_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>